        Теперь для каждой категории получаем N-ое кол-во последних добавленных в БД товаров.

    -   Рандомный товар через order_by('?').first()

    -   Личный кабинет, система авторизации, регистрации, смены пароля

    -   Страница с товарами с возможностью сортировки

    -   Скрипт генерации товаров DB_AUTO_FILL для демонстрации работы сайта
        (Доступно только админам)

        .../db_auto_fill/7/Categories/
        .../db_auto_fill/10/Subcategories/
        .../db_auto_fill/300/Products/

    -   Отдельная встраиваимая HTML карточка товара

    -   У карточки товара появилась система изменения дизайна.
    
        "Новинка" если товар был размещен в БД в течение N дней.
        "Скидка" если у товара указана цена со скидкой.

    -   Добавлен адекватный футер

    -   "Докеризация" проекта

        Команды:

        # rm
            $ docker-compose down -v

        # Dev
            $ docker-compose -f docker-compose.yml up -d --build

        # Prod
            $ docker-compose -f docker-compose.prod.yml up -d --build
            $ docker-compose -f docker-compose.prod.yml exec web python manage.py migrate --noinput
            $ docker-compose -f docker-compose.prod.yml exec web python manage.py collectstatic --no-input --clear

    -   Были добавлены хлебные крошки на основе наследования шаблонов

    -   Обновлен title страницы по аналогии с хлебными крошками

    -   Добавлена базовая сортировка товаров на странице

    -   Переделаны модели и представление админки
    
    -   Создана страница товара

    -   Добавлен REST framework

    -   Создана корзина. Базируется на сессии пользователя. Хранится в cookies.

    -   Добавлены страницы "О нас", "Доставка" и "Контакты"

    -   Добавлена функция оформления заказа

    -   Добавлена возможность вставлять в полное описание товара HTML код для красивого оформления описания, а не просто текста)