@@ -4,7 +4,7 @@
 *.pyc
 __pycache__
 db.sqlite3
-media/_versions/
+media/
 
 # Backup files # 
 *.bak 
