@@ -1,0 +1,34 @@
+# Generated by Django 4.1.1 on 2022-10-03 01:29
+
+from django.db import migrations, models
+import shortuuid.django_fields
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('Orders', '0002_remove_orders_order_uuid_orders_uuid'),
+    ]
+
+    operations = [
+        migrations.AlterField(
+            model_name='orders',
+            name='UUID',
+            field=shortuuid.django_fields.ShortUUIDField(alphabet='0123456789', auto_created=True, editable=False, length=10, max_length=10, prefix='', unique=True, verbose_name='UUID заказа'),
+        ),
+        migrations.AlterField(
+            model_name='orders',
+            name='adress',
+            field=models.TextField(blank=True, null=True, verbose_name='Адрес клиента'),
+        ),
+        migrations.AlterField(
+            model_name='orders',
+            name='contacts',
+            field=models.TextField(blank=True, null=True, verbose_name='Контакты клиента'),
+        ),
+        migrations.AlterField(
+            model_name='orders',
+            name='product_list',
+            field=models.TextField(blank=True, null=True, verbose_name='Список товаров'),
+        ),
+    ]
