@@ -1,0 +1,19 @@
+# Generated by Django 4.1.1 on 2022-10-03 03:59
+
+from django.db import migrations
+import tinymce.models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('Shop', '0017_delete_current_orders_and_more'),
+    ]
+
+    operations = [
+        migrations.AlterField(
+            model_name='products',
+            name='full_information',
+            field=tinymce.models.HTMLField(blank=True, null=True, verbose_name='Полная информация о товаре'),
+        ),
+    ]
