@@ -6,8 +6,12 @@ services:
     build:
       context: ./
       dockerfile: Dockerfile.prod
-    command: gunicorn Site.wsgi:application --bind 0.0.0.0:8000
-    container_name: 'gunicorn web'
+    command: >
+      sh -c "python manage.py createcachetable
+             python manage.py migrate --noinput
+             python manage.py collectstatic --no-input --clear
+             gunicorn Site.wsgi:application --bind 0.0.0.0:8000"
+    container_name: 'gunicorn_web'
     volumes:
       - static_volume:/home/app/web/staticfiles
       - media_volume:/home/app/web/mediafiles
