@@ -69,3 +69,11 @@ v0.2 changes:
     -   Добавлена функция оформления заказа
 
     -   Добавлена возможность вставлять в полное описание товара HTML код для красивого оформления описания, а не просто текста)
+
+    -   Добавлен Celery, RabbitMQ
+
+    -   При помощи библиотеки filebrower добавлена возможность использования разных заранее определённых размеров изображений и редактирования изображений в админке
+
+    -   Хорошо переработана админка. Новый настраиваемый интерфейс, добавлены поля TinyMCE, файловый менеджер, редактирование настроек
+
+    -   Теперь практически все основные параметры сайта настраиваются из админки
